--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
@@ -41,3 +41,11 @@ d）勾选全部，选择接口模块、SQL组和SQL模块，如图2-4所示：
 ![2-5](https://www.feisuanyz.com/fsimage/ks-image/ksrm_6_2_5.png)
 
 ##### 图2-5 取消勾选创建实体模型
+
+e）单击“生成接口”，系统提示操作成功。
+
+f）您可以单击“接口管理”功能模块，在对应的接口模块下看到自动生成的接口，如图2-6所示：
+
+![2-6](https://www.feisuanyz.com/fsimage/ks-image/ks_14-4_img.png)
+
+##### 图2-6 查看自动生成的接口
