--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/3. 如何使用接口拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/3. 如何使用接口拦截器.md
@@ -1,1 +1,9 @@
-test
+### 6. 创建接口
+
+#### 6.3 如何使用接口拦截器
+
+本节主要介绍如何使用拦截器进行拦截接口或者放行接口操作。
+
+##### 6.3.2 操作步骤
+
+a）在项目管理页面，选择项目的卡片，单击设置按钮，选择“加载项”，如图3-1所示：
