--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/3. 如何使用接口拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/3. 如何使用接口拦截器.md
@@ -7,3 +7,9 @@
 ##### 6.3.2 操作步骤
 
 a）在项目管理页面，选择项目的卡片，单击设置按钮，选择“加载项”，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/ks-image/ks_11-1_img.png)
+
+##### 图3-1 选择加载项
+
+b）系统显示“项目加载项”页面，选择“插件”页签，单击“添加”添加插件，如图3-2所示：
