--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
@@ -3,3 +3,13 @@
 #### 7.1 如何测试接口
 
 本节主要介绍如何对已经开发完成的接口进行测试。
+
+##### 7.1.1 操作步骤
+
+a）在平台功能模块界面，选择“接口管理”功能模块，系统显示“接口管理”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_9-1_img.png)
+
+##### 图1-1 选择接口管理
+
+b）在左侧页面选择接口模块，并展开接口模块列表，如图1-2所示：
