--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
@@ -23,3 +23,11 @@ c）选中接口并双击，进入接口模型页面，如图1-3所示：
 ![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_9-3_img.png)
 
 ##### 图1-3 进入接口模型页面
+
+d）单击“提交”后的“•••”，选择“测试用例”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_9-4_img.png)
+
+##### 图1-4 选择测试用例
+
+e）系统显示测试用例页面，如图1-5所示：
