--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
@@ -31,3 +31,11 @@ d）单击“提交”后的“•••”，选择“测试用例”，如图1
 ##### 图1-4 选择测试用例
 
 e）系统显示测试用例页面，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/ks-image/ks_9-5_img.png)
+
+##### 图1-5 测试用例页面
+
+f）勾选测试用例，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/ks-image/ks_9-6_img.png)
