--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/7. 测试接口/1. 如何测试接口.md
@@ -39,3 +39,11 @@ e）系统显示测试用例页面，如图1-5所示：
 f）勾选测试用例，如图1-6所示：
 
 ![1-6](https://www.feisuanyz.com/fsimage/ks-image/ks_9-6_img.png)
+
+##### 图1-6 勾选测试用例
+
+g）单击“执行”，测试接口执行结果，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/ks-image/ks_9-7_img.png)
+
+##### 图1-7 测试结果
