--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
@@ -1,1 +1,11 @@
-test
+### 8. 项目发版
+
+#### 8.1 如何对项目发版
+
+本节主要介绍如何对已经开发完成的微服务项目进行项目发版的具体操作方法。
+
+##### 8.1.1 操作步骤
+
+a）选择已创建项目的卡片，单击设置按钮，选择“发版”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_3-1_img.png)
