--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
@@ -9,3 +9,11 @@
 a）选择已创建项目的卡片，单击设置按钮，选择“发版”，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_3-1_img.png)
+
+##### 图1-1 选择发版
+
+b）进入项目发版页面，输入项目发版的标签和描述，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_3-2_img.png)
+
+##### 图1-2 项目发版页面
