--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
@@ -23,3 +23,11 @@ c）单击“确定”，系统提示“正在生成项目数据包，请于2分
 d）稍等片刻后，再次单击项目卡片上的设置按钮，选择“发版记录”，如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_3-3_img.png)
+
+##### 图1-3 选择发版记录
+
+e）进入发版记录页面，查看项目发版记录的信息，说明项目发版成功，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_3-4_img.png)
+
+##### 图1-4 发版记录页面
