--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -7,3 +7,17 @@
 ##### 9.1.1 前提条件
 
 您已经完成了项目发版的操作，详见[《SoFlu快速入门教程（2022-详细版）第8.1节：如何对项目发版》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/8.%20%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88/1.%20%E5%A6%82%E4%BD%95%E5%AF%B9%E9%A1%B9%E7%9B%AE%E5%8F%91%E7%89%88.md)。
+
+##### 9.1.2 操作步骤
+
+项目部署主要分为以下几步：
+
+a）下载执行引擎包
+
+b）下载项目部署包
+
+c）启动项目
+
+##### 9.1.2.1 下载执行引擎包
+
+a）进入平台项目管理页面，单击页面右上方的下载按钮，如图1-1所示：
