--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -21,3 +21,13 @@ c）启动项目
 ##### 9.1.2.1 下载执行引擎包
 
 a）进入平台项目管理页面，单击页面右上方的下载按钮，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/xiangmubushu/xiazaibushubao_1.png)
+
+##### 图1-1 项目管理页面
+
+b）系统弹出开发辅助工具页面，单击执行引擎图标下载执行引擎包保存至本地PC，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/xiangmubushu/xiazaibushubao_2.png)
+
+##### 图1-2 开发辅助工具页面
