--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -67,3 +67,18 @@ b）将下载的项目部署包移动到执行引擎包的apps目录下。
 ##### 说明：
 
 ##### b1）若解压后的执行引擎包没有apps目录，请手动创建apps目录。
+
+##### b2）项目部署默认不需要配置任何内容，启动端口默认为8080，日志文件默认存放在当前执行引擎包目录下面的logs目录中（该目录在项目服务启动后自动生成）。
+例如：若解压后的执行引擎包为feisuanyz-engine-3.0.12，则日志生成路径是 feisuanyz-engine-3.0.12/logs ，若需要修改配置，您需要创建一个` application.yml `文件，该文件需要与` feisuanyz-engine.jar `存放到同一目录中。
+
+`application.yml `文件创建模板如下：
+
+```
+server:
+    # 服务端口
+    port: 8080
+
+# 系统日志配置（日志二选一）
+logging:
+    file:
+        path: /logs
