--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -82,3 +82,20 @@ server:
 logging:
     file:
         path: /logs
+        
+# 系统日志存储到kafka（日志二选一）
+logging:
+    config: classpath:logback-kafka.xml
+
+# kafka相关配置，日志默认是保存到本地文件中，我们也支持将日志存储到kafka，需要按照下面模板进行配置
+fs:
+    kafka:
+        producer-enabled: true
+        producers:
+            logback:
+            # kafka集群地址
+                bootstrapservers: bootstrap.servers=127.0.0.1:9092,127.0.0.2:9093,127.0.0.3:9092
+                # topic
+        topic: flow-system-logs
+```
+
