--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -99,3 +99,14 @@ fs:
         topic: flow-system-logs
 ```
 
+##### 注意：` application.yml `的日志的存储方式只能选择一种。
+
+c）（可选）如果在Windows操作系统下部署项目，则执行以下操作：
+
+直接双击` startup.bat `即可启动项目服务，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/ks-image/xiangmubushu/xiazaibushubao_7.png)
+
+##### 图1-7 Windows系统下部署项目
+
+##### 注意：默认服务端口是8080，日志存放路径是当前部署项目根目录，例如：\feisuanyz-engine-3.0.12\logs。
