--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -110,3 +110,13 @@ c）（可选）如果在Windows操作系统下部署项目，则执行以下操
 ##### 图1-7 Windows系统下部署项目
 
 ##### 注意：默认服务端口是8080，日志存放路径是当前部署项目根目录，例如：\feisuanyz-engine-3.0.12\logs。
+
+d）（可选）如果在Linux操作系统部署项目，则执行以下操作：
+
+d1）使用工具或者通过二进制方式上传项目部署包至安装的服务器。
+
+d2）进入当前项目的安装路径下。
+
+d3）执行以下命令给安装脚本添加执行权限：
+
+`chmod a+x startup.sh`
