--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -120,3 +120,15 @@ d2）进入当前项目的安装路径下。
 d3）执行以下命令给安装脚本添加执行权限：
 
 `chmod a+x startup.sh`
+
+`chmod a+x shutdown.sh`
+
+d4）执行./startup.sh启动项目服务，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/ks-image/ks_8-8_img.png)
+
+##### 图1-8 Linux系统下部署项目
+
+##### 注意：
+
+##### startup.sh为启动服务脚本；shutdown.sh为停止服务脚本。
