--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/9. 项目部署/1. 如何部署项目.md
@@ -132,3 +132,11 @@ d4）执行./startup.sh启动项目服务，如图1-8所示：
 ##### 注意：
 
 ##### startup.sh为启动服务脚本；shutdown.sh为停止服务脚本。
+
+##### 默认服务端口是8080，日志存放路径是当前部署项目根目录，例如：/feisuanyz-engine-3.0.12/logs。
+
+d5）若出现如图1-9所示信息，即说明项目部署成功：
+
+![1-9](https://www.feisuanyz.com/fsimage/ks-image/xiangmubushu/xiazaibushubao_8.png)
+
+##### 图1-9 项目部署成功
