--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
@@ -5,3 +5,13 @@
 本节主要介绍如何在项目中新增定时任务的具体操作方法。
 
 ##### 10.1.1 操作步骤
+
+a）在平台功能模块界面中，选择“定时任务”功能模块，系统显示定时任务页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_15-01_img.png)
+
+##### 图1-1 选择定时任务模块
+
+b）单击“新增定时任务”，系统显示“新增定时任务”页面，输入定时任务的信息，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_15-02_img.png)
