--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
@@ -39,3 +39,11 @@ g）单击“执行任务”，测试定时任务功能，如图1-7所示：
 ![1-7](https://www.feisuanyz.com/fsimage/ks-image/ks_15-07_img.png)
 
 ##### 图1-7 测试定时任务功能
+
+h）查看定时任务测试结果，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/ks-image/ks_15-08_img.png)
+
+##### 图1-8 查看定时任务测试结果
+
+i）单击“响应结果”列显示的链接查看具体的结果信息，如图1-9所示：
