--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/1. 如何新增定时任务.md
@@ -47,3 +47,13 @@ h）查看定时任务测试结果，如图1-8所示：
 ##### 图1-8 查看定时任务测试结果
 
 i）单击“响应结果”列显示的链接查看具体的结果信息，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/ks-image/ks_15-09_img.png)
+
+##### 图1-9 查看具体的结果信息
+
+j）单击“启动任务”，完成启动定时任务，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/ks-image/ks_15-10_img.png)
+
+##### 图1-10 启动定时任务
