--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/2. 如何使用接口文档调测接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/2. 如何使用接口文档调测接口.md
@@ -7,3 +7,11 @@
 ##### 10.2.1 操作步骤
 
 a）进入平台功能模块界面，系统默认显示“接口管理”页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/ks-image/ks_10-1_img.png)
+
+##### 图2-1 接口管理页面
+
+b）单击“接口文档”功能模块，进入“接口文档”主页面，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/ks-image/ks_10-2_img.png)
