--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/2. 如何使用接口文档调测接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/2. 如何使用接口文档调测接口.md
@@ -29,3 +29,9 @@ d）选择“调试”页签，进入接口调试页面，如图2-4所示：
 ![2-4](https://www.feisuanyz.com/fsimage/ks-image/ks_10-4_img.png)
 
 ##### 图2-4 接口调测页面
+
+e）单击“发送”，调测接口结果如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fsimage/ks-image/ks_10-5_img.png)
+
+##### 图2-5 调测结果页面
