--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/3. 如何查看项目的JAR包依赖关系.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/3. 如何查看项目的JAR包依赖关系.md
@@ -3,3 +3,9 @@
 #### 10.3 如何查看项目的JAR包依赖关系
 
 本节主要介绍如何查看项目的根JAR包、项目JAR扩展包、项目公共JAR包依赖关系。
+
+##### 10.3.1 操作步骤
+
+a）选择已经创建项目的卡片，进入平台功能模块界面，选择“Jar包依赖图”功能模块，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/ks-image/ks_16-01_img.png)
