--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/3. 如何查看项目的JAR包依赖关系.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/3. 如何查看项目的JAR包依赖关系.md
@@ -9,3 +9,11 @@
 a）选择已经创建项目的卡片，进入平台功能模块界面，选择“Jar包依赖图”功能模块，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fsimage/ks-image/ks_16-01_img.png)
+
+##### 图3-1 Jar包依赖图页面
+
+b）在搜索框中输入查询的条件，系统自动加载该项目的JAR依赖包关系，如图3-2所示：
+
+![3-2](https://www.feisuanyz.com/fsimage/ks-image/ks_16-02_img.png)
+
+##### 图3-2 项目JAR包依赖关系
