--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
@@ -3,3 +3,11 @@
 #### 10.4 如何提交接口版本
 
 本节主要介绍如何对已经开发的接口进行提交版本。
+
+##### 10.4.1 前提条件
+
+您已经在全自动开发平台完成接口开发。
+
+##### 10.4.2 操作步骤
+
+a）在用于接口开发的窗体视图中完成流程图的绘制之后，单击“保存”，如图4-1所示：
