--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
@@ -11,3 +11,9 @@
 ##### 10.4.2 操作步骤
 
 a）在用于接口开发的窗体视图中完成流程图的绘制之后，单击“保存”，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-1_img.png)
+
+##### 图4-1 保存开发接口的流程图
+
+b）在上方导航栏，单击“提交版本”选项，系统显示“提交版本”页面，如图4-2所示：
