--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
@@ -11,3 +11,11 @@ a）您已经在全自动开放平台完成接口开发。
 b）已经提交了至少两次的接口开发版本。
 
 ##### 10.5.2 操作步骤
+
+a）在窗体视图的工具导航栏，单击“版本比较”选项，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-3_img.png)
+
+##### 图5-1 选择版本比较
+
+b）进入流程图版本比较页面，选择基本版本和比较版本，单击“开始比较”，如图5-2所示：
