--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
@@ -19,3 +19,9 @@ a）在窗体视图的工具导航栏，单击“版本比较”选项，如图5
 ##### 图5-1 选择版本比较
 
 b）进入流程图版本比较页面，选择基本版本和比较版本，单击“开始比较”，如图5-2所示：
+
+![5-2](https://www.feisuanyz.com/fsimage/ks-image/ks_12-5_img.png)
+
+##### 图5-2 流程图版本比较页面
+
+c）单击“查看不同”，查看版本修改记录，如图5-3所示：
