--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
@@ -5,3 +5,13 @@
 本节主要介绍如何对已经开发的接口进行检出版本。
 
 ##### 10.6.1 前提条件
+
+a）您已经在全自动开放平台完成接口开发。
+
+b）已经提交了至少两次的接口开发版本。
+
+##### 10.6.2 操作步骤
+
+a）在窗体视图的工具导航栏，单击“检出版本”选项，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-7_img.png)
