--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
@@ -15,3 +15,9 @@ b）已经提交了至少两次的接口开发版本。
 a）在窗体视图的工具导航栏，单击“检出版本”选项，如图6-1所示：
 
 ![6-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-7_img.png)
+
+##### 图6-1 选择检出版本
+
+b）进入历史版本页面，选择需要检出的版本，单击“检出”，如图6-2所示：
+
+![6-2](https://www.feisuanyz.com/fsimage/ks-image/ks_12-8_img.png)
