--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
@@ -1,1 +1,9 @@
-test
+### 10. 常见问题
+
+#### 10.7 如何新增实体模型
+
+本节主要介绍如何新增实体模型的具体操作方法。
+
+##### 10.7.1 操作步骤
+
+a）在平台功能模块界面，选择“实体模型”功能模块，系统显示实体模型页面，如图7-1所示：
