--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
@@ -7,3 +7,11 @@
 ##### 10.7.1 操作步骤
 
 a）在平台功能模块界面，选择“实体模型”功能模块，系统显示实体模型页面，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fsimage/ks-image/ks_19-01_img.png)
+
+##### 图7-1 实体模型页面
+
+b）单击“新增实体模型模块”，系统显示“新增实体模型模块”页面，如图7-2所示：
+
+![7-2](https://www.feisuanyz.com/fsimage/ks-image/ks_19-02_img.png)
