--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
@@ -29,3 +29,7 @@ d）选中已创建的实体模型模块，单击“+”选择“新增实体模
 e）系统显示新增实体模型页面，输入实体模型的名称和描述，单击“新增”，根据实际需求添加实体模型字段，如图7-4所示：
 
 ![7-4](https://www.feisuanyz.com/fsimage/ks-image/ks_19-04_img.png)
+
+##### 图7-4 添加实体模型字段
+
+f）单击“提交”，系统显示新增成功。
