--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
@@ -5,3 +5,9 @@
 本节主要介绍如何复制实体模型的具体操作方法。
 
 ##### 10.8.1 前提条件
+
+您已经创建好实体模型模块。
+
+##### 10.8.2 操作步骤
+
+a）在平台功能模块界面，选择“实体模型”功能模块，选中需复制的实体模型，单击旁边的三个点符号，或进入编辑实体模型页面，选择“复制实体模型”，如图8-1、8-2所示：
