--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
@@ -11,3 +11,11 @@
 ##### 10.8.2 操作步骤
 
 a）在平台功能模块界面，选择“实体模型”功能模块，选中需复制的实体模型，单击旁边的三个点符号，或进入编辑实体模型页面，选择“复制实体模型”，如图8-1、8-2所示：
+
+![8-1](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_1.png)
+
+##### 图8-1 实体模型列表
+
+![8-2](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_9.png)
+
+##### 图8-2 编辑实体模型页面
