--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/8. 如何复制实体模型.md
@@ -31,3 +31,11 @@ c）修改实体模型名称，单击“提交”，如图8-4所示：
 ##### 说明：您同时也可以根据实际需求修改实体模型的描述，以及编辑实体模型字段。
 
 ![8-4](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_3.png)
+
+##### 图8-4 修改实体模型名称
+
+d）复制后的实体模型会显示在指定模块中，如图8-5所示：
+
+![8-5](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_4.png)
+
+##### 图8-5 复制成功
