--- a/SoFlu Tutorial（ Community Edition ）/SoFlu前端调测/1. 项目接口与前端在线联调.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu前端调测/1. 项目接口与前端在线联调.md
@@ -16,7 +16,7 @@ a）新增AccessKey管理所有SQL配置在XML文件。
 
 a1）单击在飞算云智的控制台，进入用户控制台页面，如图1-1所示：
 
-![1-1](../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%E5%89%8D%E7%AB%AF%E8%B0%83%E6%B5%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/168991000-208eb97e-5514-4c03-b17c-04f1b93db830.png)
 
 ##### 图1-1 选择控制台
 
