--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.1 数据中心.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.1 数据中心.md
@@ -14,24 +14,26 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在全自动开发平台项目管理页面上方菜单区，选择“配置中心”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/czzn_2_1_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/170007269-327f96cd-64b7-4b0b-bdd1-aa2a4e450f6d.png)
 
 ##### 图1-1 项目管理页面
 
 b）在全自动开发平台项目管理页面上方菜单区，选择“配置中心”，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/czzn_2_1_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/170007303-c3537733-423f-41ed-9aa6-5ed1cd10ba25.png)
 
 ##### 图1-2 配置中心页面
 
 c）进入新增数据中心页面，填写正确的数据中心名称和描述，单击“确定”，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/czzn_2_1_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/170007328-70cf4171-5f9e-41db-900e-3f2d99af4454.png)
+
 ##### 图1-3 新增数据中心页面
 
 d） 新增的数据中心在数据中心列表中显示，说明新增成功，您可以对数据中心进行修改和删除操作，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/czzn_2_1_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/170007355-02b28eb0-2962-4db7-b6b2-bf6f11064382.png)
+
 ##### 图1-4  新增成功
 
 #### 1.2 修改数据中心
@@ -46,17 +48,17 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 1.2.1 操作步骤
 
-a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-4所示：
+a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-5所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/2-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170007444-a66b2f4e-c3df-4032-88ce-baa71f4062d2.png)
 
-##### 图1-4 数据中心页面
+##### 图1-5 数据中心页面
 
-b）在“数据中心”区域，单击需要修改的数据中心后面的修改按钮，系统显示“修改数据中心”页面，如图1-5所示：
+b）在“数据中心”区域，单击需要修改的数据中心后面的修改按钮，系统显示“修改数据中心”页面，如图1-6所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/2-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170007500-f8662320-6593-4d2b-ae10-e51e56997166.png)
 
-##### 图1-5 修改数据中心页面
+##### 图1-6 修改数据中心页面
 
 c）输入正确的数据中心名称和描述，单击“确定” --> 系统提示“修改成功”。
 
@@ -72,11 +74,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 1.3.1 操作步骤
 
-a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-6所示：
+a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-7所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/2-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170007549-42253c80-0afa-4c3b-a215-c6703313225e.png)
 
-##### 图1-6 数据中心页面
+##### 图1-7 数据中心页面
 
 b）在“数据中心”区域，单击需要删除的数据中心后的删除按钮 --> 系统提示“确定删除该数据中心吗？”。
 
@@ -94,17 +96,17 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 1.4.1 操作步骤
 
-a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-7所示：
+a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图1-8所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/2-6_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170007597-dfc5aa93-18ed-497d-b523-5e95c8889bb4.png)
 
-##### 图1-7 数据中心页面
+##### 图1-8 数据中心页面
 
-b）在“数据中心”区域，单击“已删除”页签，数据中心列表中显示已删除的数据中心，如图1-8所示：
+b）在“数据中心”区域，单击“已删除”页签，数据中心列表中显示已删除的数据中心，如图1-9所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/2-7_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170007630-b6c4ba6f-865d-41c7-9448-c22e10702c5d.png)
 
-##### 图1-8 恢复数据中心
+##### 图1-9 恢复数据中心
 
 c）选择需要恢复的数据中心，单击恢复按钮 --> 系统提示“确定恢复该数据中心吗？”。
 
