--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.2 环境管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.2 环境管理.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/zc-image/2-10_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234165-0ca8971f-37d4-46ab-bd1a-a0d95a390cf0.png)
 
 ##### 图2-1 数据中心页面
 
 b）在“环境管理”区域，单击“+”新增环境，系统显示“新增环境”页面如图2-2所示：
 
-![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_2.2.2-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234204-6484aa23-43da-409b-9fdf-71f719553708.png)
 
 ##### 图2-2 新增环境
 
@@ -40,13 +40,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图2-3所示：
 
-![2-3](https://www.feisuanyz.com/fsimage/zc-image/2-10_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234253-ac77e617-7182-4514-ad2a-9964ae1793bd.png)
 
 ##### 图2-3 数据中心页面
 
 b）在“环境管理”区域，单击需要修改的环境的编辑按钮，系统显示“编辑环境”页面如图2-4所示：
 
-![2-4](https://www.feisuanyz.com/fsimage/zc-image/2-11_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234315-2d82c857-50be-4d18-bfc1-b9135de37648.png)
 
 ##### 图2-4 编辑数据中心
 
@@ -66,7 +66,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图2-5所示：
 
-![2-5](https://www.feisuanyz.com/fsimage/zc-image/2-12_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234378-cc3bd622-8ebb-461f-bda6-85167b6c8a18.png)
 
 ##### 图2-5 数据中心页面
 
@@ -88,13 +88,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图2-6所示：
 
-![2-6](https://www.feisuanyz.com/fsimage/zc-image/2-13_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234425-590b078b-da09-4d58-901c-65d6244af6b7.png)
 
 ##### 图2-6 数据中心页面
 
 b）在“环境管理”区域，单击“已删除”页签，环境管理列表中显示已删除的环境信息，如图2-7所示：
 
-![2-7](https://www.feisuanyz.com/fsimage/zc-image/2-14_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234461-2d48032d-1761-4bca-a322-11eeca3d5e91.png)
 
 ##### 图2-7 恢复环境
 
@@ -116,19 +116,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 数据中心”，系统显示“数据中心”页面，如图2-8所示：
 
-![2-8](https://www.feisuanyz.com/fsimage/zc-image/2-15_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234507-55b44e73-28bb-45d4-888e-9854cd294545.png)
 
 ##### 图2-8 数据中心页面
 
 b）在“环境管理”区域，单击“分配数据中心”按钮，系统显示“分配数据中心”页面，如图2-9所示：
 
-![2-9](https://www.feisuanyz.com/fsimage/zc-image/2-16_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234567-d87f588e-a5a0-438b-bbda-67d3ef5a2dd5.png)
 
 ##### 图2-9 分配数据中心
 
 c）选择需要分配的数据中心，单击“ + ”按钮，分配后的数据中心显示为“√ ”，如图2-10所示：
 
-![2-10](https://www.feisuanyz.com/fsimage/zc-image/2-17_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234601-15cbc797-ee22-43f2-a5a7-ea0ad1b7fd7a.png)
 
 ##### 图2-10 分配数据中心结果
 
