--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.3 资源中心.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/1. 配置中心/1.3 资源中心.md
@@ -18,13 +18,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“配置中心 > 资源中心”，系统显示“资源中心”页面，如图3-1所示：
 
-![3-1](https://www.feisuanyz.com/fsimage/zc-image/2-31_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234754-3460b1c9-c2fc-4dc5-b4b9-76418b8e5154.png)
 
 ##### 图3-1 数据中心页面
 
 b） 单击“导入”，系统显示“导入资源类型”，如图3-2所示：
 
-![3-2](https://www.feisuanyz.com/fsimage/zc-image/2-32_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170234775-b70252eb-74a2-4e0c-b72d-7aaf64cf2034.png)
 
 ##### 图3-2 导入资源类型
 
@@ -46,12 +46,12 @@ d）单击“确定” --> 系统提示“操作成功”。
 
 a） 选择“配置中心 > 资源中心”，系统显示“资源中心”页面，包含租户级和平台级资源，如图3-3所示：
 
-![3-3](https://www.feisuanyz.com/fsimage/zc-image/2peizhicenter/source_1.png)
+![image](https://user-images.githubusercontent.com/79617492/170234817-71d4b6ad-9abf-42fc-917d-cff808f25084.png)
 
 ##### 图3-3 资源中心页面
 
 b） 分别选择租户级或者平台级，可以查看对应的资源类型信息，如图3-4所示：
 
-![3-4](https://www.feisuanyz.com/fsimage/zc-image/2peizhicenter/source_2.png)
+![image](https://user-images.githubusercontent.com/79617492/170234834-10310713-1de0-45ab-89f4-e540f5ba1e17.png)
 
 ##### 图3-4 资源类型列表
