--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
@@ -10,7 +10,7 @@ a）您需要拥有“资源实例”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-c）您需要预先添加分布式中间件资源加载项，具体可参见[《SoFlu社区版快速入门教程：4.9 如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md)。
+c）您需要预先添加分布式中间件资源加载项，具体可参见[《SoFlu（后端）快速入门教程第4.9节：新增资源实例》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
 
 ##### 1.1.1 操作步骤
 
