--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
@@ -16,13 +16,13 @@ c）您需要预先添加分布式中间件资源加载项，具体可参见[《
 
 a）进入平台“资源实例”功能模块，可以看到列表中预先加载的“分布式中间件”资源类型，选中该资源类型，单击“+”按钮，选择“新增资源实例”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/11-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170456911-284d511e-eb5c-4031-ae89-3f70f99406ce.png)
 
 ##### 图1-1 资源实例页面
 
 b）在“新增资源实例”页面，填写资源名称及描述，同时填写配置项信息，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/zysl/fenbushi_1.png)
+![image](https://user-images.githubusercontent.com/79617492/170456939-e594be83-b1d5-403b-9b4b-2b58bbaa20f7.png)
 
 ##### 图1-2 填写配置项信息
 
@@ -48,25 +48,25 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170457028-14ec45a1-efb7-488f-9f36-cf9a15d00b04.png)
 
 ##### 图1-3 选择资源实例
 
 b）单击“嵌入式中间件”后的“+”，选择“新增资源实例”，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170457052-4e7163ea-3912-4810-813d-2719effe42c5.png)
 
 ##### 图1-4 新增资源实例
 
 c）在“资源实例管理”页面，选择系统默认的环境，如图1-5所示：
 
-![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170457076-1b7b8e7a-b2f9-477c-898f-e1bf124b3095.png)
 
 ##### 图1-5 选择系统默认的环境
 
 d）请根据资源实例的实际信息，配置资源实例的配置项信息，如图1-6所示：
 
-![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170457119-329fd4b9-36a4-46db-93c2-5f95c6b32215.png)
 
 ##### 图1-6 配置资源实例的配置项
 
@@ -76,7 +76,7 @@ e）单击“提交” --> 系统提示“新增成功”。
 
 f）在“资源实例管理”页面，成功新增一个分布式中间件的资源实例，如图1-7所示：
 
-![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_11.2-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170457149-1a491de6-7a34-4ba4-bdef-cdcb423bad1a.png)
 
 ##### 图1-7 新增分布式中间件
 
