--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
@@ -94,19 +94,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-8所示：
 
-![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170457294-b5033056-41e8-4aee-855e-05db7c0c8c4b.png)
 
 ##### 图1-8 选择资源实例
 
 b）单击“SFTP存储”后的“+”，选择“新增资源实例”，如图1-9所示：
 
-![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170457306-657433c1-1366-48a8-89f7-02555a255193.png)
 
 ##### 图1-9 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-10所示：
 
-![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170457327-8fcf6587-b25d-4f7e-8ad3-16e9a1747790.png)
 
 ##### 图1-10 配置配置项信息
 
@@ -126,19 +126,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-11所示:
 
-![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170457363-ddf34a7b-d3b3-4cf3-9f93-ead59e06811a.png)
 
 ##### 图1-11 选择资源实例
 
 b）单击“Minio存储”后的“+”，选择“新增资源实例”，如图1-12所示：
 
-![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_11_4_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170457397-5338893b-ac80-49df-9270-986adbfa919a.png)
 
 ##### 图1-12 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-13所示：
 
-![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_11_4_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170457410-8d6d5fe3-3d17-416c-9461-835bf1cf6bfe.png)
 
 ##### 图1-13 配置配置项信息
 
@@ -158,7 +158,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-14所示：
 
-![1-14](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170457449-ae833e45-522b-43de-b74b-c43e898d1b37.png)
 
 ##### 图1-14 选择资源实例
 
