--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
@@ -164,13 +164,13 @@ a）在项目管理页面中，选择“资源实例”，如图1-14所示：
 
 b）单击“Xeos存储”后的“+”，选择“新增资源实例”，如图1-15所示：
 
-![1-15](https://www.feisuanyz.com/fsimage/zc-image/cz_11_5_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170457548-7b2e2ccc-449b-4ce4-bee3-a32ebaef5675.png)
 
 ##### 图1-15 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-16所示：
 
-![1-16](https://www.feisuanyz.com/fsimage/zc-image/cz_11_5_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170457566-cfbd160c-c7f6-4375-9f35-baed05b5ea33.png)
 
 ##### 图1-16 配置配置项信息
 
@@ -190,19 +190,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-17所示：
 
-![1-17](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170457592-02b38ece-a8c3-4860-bb55-2e66d9074975.png)
 
 ##### 图1-17 选择资源实例
 
 b）单击“Kafka生产者”后的“+”，选择“新增资源实例”，如图1-18所示：
 
-![1-18](https://www.feisuanyz.com/fsimage/zc-image/cz_11_6_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170457607-5c79229a-39a8-4b77-8523-1a27741f8bd1.png)
 
 ##### 图1-18 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-19所示：
 
-![1-19](https://www.feisuanyz.com/fsimage/zc-image/cz_11_6_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170457619-633b6e79-c09e-4eb0-90d5-33320b733326.png)
 
 ##### 图1-19 配置配置项信息
 
@@ -222,19 +222,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-20所示：
 
-![1-20](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170457656-5134fb14-abb4-437f-afd1-0c118fb4d1d7.png)
 
 ##### 图1-20 选择资源实例
 
 b）单击“Kafka消费者”后的“+”，选择“新增资源实例”，如图1-21所示：
 
-![1-21](https://www.feisuanyz.com/fsimage/zc-image/cz_11_7_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170457676-f867c6eb-330d-4428-a700-11a41d646e3e.png)
 
 ##### 图1-21 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-22所示：
 
-![1-22](https://www.feisuanyz.com/fsimage/zc-image/cz_11_7_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170457703-3a490bc6-bd39-4324-8fd2-bbbcba0104d0.png)
 
 ##### 图1-22 配置配置项信息
 
