--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/1. 新增资源实例.md
@@ -254,29 +254,29 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-23所示：
 
-![1-23](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170459588-20282656-7778-4d31-b14e-e073df1dcdcf.png)
 
-##### 图1-20 选择资源实例
+##### 图1-23 选择资源实例
 
 b）单击“Redis缓存”后的“+”，选择“新增资源实例”，如图1-24所示：
 
-![1-24](https://www.feisuanyz.com/fsimage/zc-image/cz_11_8_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170460621-9ab595ab-918b-4641-a2c0-a1b384a33d6d.png)
 
 ##### 图1-24 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-25所示：
 
-![1-25](https://www.feisuanyz.com/fsimage/zc-image/cz_11_8_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170460722-5a906127-11f7-4a37-8528-a6608e1fa7f4.png)
 
 ##### 图1-25 填写配置项信息
 
 d）您也可以单击“示例”参考配置项信息，进入“资源实例示例”页面，示例包含“集群模式”、“云托管模式”、“单节点模式”、“哨兵模式”和“主从模式”五种，如图1-26、1-27所示：
 
-![1-26](https://www.feisuanyz.com/fsimage/zc-image/cz_11_8_05.png)
+![image](https://user-images.githubusercontent.com/79617492/170460748-444c33d2-797d-44ff-89fc-520887e85bbf.png)
 
 ##### 图1-26 单击示例
 
-![1-27](https://www.feisuanyz.com/fsimage/zc-image/cz_11_8_04.png)
+![image](https://user-images.githubusercontent.com/79617492/170460773-59829d95-8bca-41cc-9505-bba0c714d52b.png)
 
 ##### 图1-27 资源实例示例页面
 
@@ -294,25 +294,25 @@ a）您需要拥有“资源实例”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
-c）您需要提前在项目加载项添加Http组件加载项，添加项目加载项方式参见[《项目管理 第1.7节：添加项目加载项》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#17-%E6%B7%BB%E5%8A%A0%E9%A1%B9%E7%9B%AE%E5%8A%A0%E8%BD%BD%E9%A1%B9)。
+c）您需要提前在项目加载项添加Http组件加载项，添加项目加载项方式参见[《SoFlu（后端）基础操作指南第8.1.7节：添加项目加载项》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/8.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86.md#17-%E6%B7%BB%E5%8A%A0%E9%A1%B9%E7%9B%AE%E5%8A%A0%E8%BD%BD%E9%A1%B9)。
 
 ##### 1.9.1 操作步骤
 
 a）在项目管理页面中，选择“资源实例”，如图1-28所示：
 
-![1-28](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170461064-230775dc-5455-4d93-8b30-7d4398dcc315.png)
 
 ##### 图1-28 选择资源实例
 
 b）单击“Http通信”后的“+”，选择“新增资源实例”，如图1-29所示：
 
-![1-29](https://www.feisuanyz.com/fsimage/zc-image/cz_11_9_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170461081-6852a019-c96f-4fe9-9850-ad9a0020ad28.png)
 
 ##### 图1-29 新增资源实例
 
 c）在“资源实例管理”页面，填写资源实例的名称和描述，选择系统默认的环境，根据资源实例的实际信息，配置资源实例的配置项信息，如图1-30所示：
 
-![1-30](https://www.feisuanyz.com/fsimage/zc-image/cz_11_9_03.png)
+![image](https://user-images.githubusercontent.com/79617492/170461115-4da3001a-5f62-44df-9a76-1480e2a1edb5.png)
 
 ##### 图1-30 配置配置项信息
 
@@ -334,13 +334,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）在项目管理页面中，选择“资源实例”，如图1-31所示：
 
-![1-31](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+![image](https://user-images.githubusercontent.com/79617492/170461155-4b62c6cf-b2df-41b5-b1f0-2e85ed6d0e52.png)
 
 ##### 图1-31 选择资源实例
 
 b）单击“Redis缓存”后的“+”，选择“新增资源实例”，如图1-32所示：
 
-![1-32](https://www.feisuanyz.com/fsimage/zc-image/cz_11_10_02.png)
+![image](https://user-images.githubusercontent.com/79617492/170461176-9d244ecc-1632-4b30-a331-ab73e3bf704e.png)
 
 ##### 图1-32 新增资源实例
 
