--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/4. 导出资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/10. 资源实例/4. 导出资源实例.md
@@ -14,22 +14,23 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入资源实例模块，单击“导入资源实例”旁的三个点符号，选择“导出资源实例”，如图4-1、4-2所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_12.png)
+![image](https://user-images.githubusercontent.com/79617492/170644520-51e5cb11-1bfb-4de4-b16a-cad239b02430.png)
 
 ##### 图4-1 选择导出资源实例
 
-![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_13.png)
+![image](https://user-images.githubusercontent.com/79617492/170644541-e038c0dd-f8e1-4858-ae46-1a9ed062e4f1.png)
 
 ##### 图4-2 选择导出资源实例
 
 b）系统显示导出资源实例页面，输入导出资源实例文件的文件名（若未输入则自动生成），勾选需导出的资源实例，单击“确定”，如图4-3所示：
 
-![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_14.png)
-.##### 图4-3 导出资源实例页面
+![image](https://user-images.githubusercontent.com/79617492/170644563-d44bd6f9-04d8-47d6-8306-edd13d1e05c0.png)
+
+##### 图4-3 导出资源实例页面
 
 c）系统显示选择环境页面，您需要选择在哪种环境下导出，如图4-4所示：
 
-![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_11_13_15.png)
+![image](https://user-images.githubusercontent.com/79617492/170644580-63bdc5c0-54a3-4f66-a33a-1637bd74282c.png)
 
 ##### 图4-4 选择环境
 
