--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/11. SQL管理/3. SQL信息管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/11. SQL管理/3. SQL信息管理.md
@@ -66,7 +66,7 @@ i）单击“确定”。
 
 j）单击“SQL在线调试”，系统显示“SQL在线调试”页面；单击“开始校验”，校验结果如图3-8所示：
 
-![3-8](https://www.feisuanyz.com/fsimage/zc-image/9-29_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645535-32979946-9187-45b4-9225-9f129f8b5c8e.png)
 
 ##### 图3-8 SQL在线调式
 
@@ -92,13 +92,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图3-9所示：
 
-![3-9](https://www.feisuanyz.com/fsimage/zc-image/cz_12-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645572-102be742-730b-4454-9ae9-3db3f083a512.png)
 
 ##### 图3-9 SQL管理页面
 
 b）选择需要修改的SQL信息的SQL组，如图3-10所示：
 
-![3-10](https://www.feisuanyz.com/fsimage/zc-image/cz_12-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645587-dae5455c-7c30-4b19-9094-fd7586752a91.png)
 
 ##### 图3-10 选择SQL组
 
@@ -106,17 +106,17 @@ b）选择需要修改的SQL信息的SQL组，如图3-10所示：
 
 c）选择需要修改的SQL信息，单击“编辑”，系统显示“修改SQL信息”页面，如图3-11所示：
 
-![3-11](https://www.feisuanyz.com/fsimage/zc-image/cz_12-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645614-8cc1407d-6dc4-468b-9217-908e40ec51cb.png)
 
 ##### 图3-11 修改SQL信息
 
 d）单击“可视化录入SQL内容”页签，请根据实际情况修改SQL信息，如图3-12、图3-13所示：
 
-![3-12](https://www.feisuanyz.com/fsimage/zc-image/cz_12-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645627-045cfb26-5bc4-4e8c-9541-af142a70cc57.png)
 
 ##### 图3-12 对查询的SQL信息添加条件
 
-![3-13](https://www.feisuanyz.com/fsimage/zc-image/cz_12-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645640-be6a4937-8ac1-4bb3-8517-3348c3dd9fc5.png)
 
 ##### 图3-13 添加查询条件结果展示
 
@@ -140,19 +140,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > SQL管理”，系统显示“SQL管理”页面，如图3-14所示：
 
-![3-14](https://www.feisuanyz.com/fsimage/zc-image/cz_12-6_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645656-f9948552-1ec3-429a-8fad-bf2fa344f19e.png)
 
 ##### 图3-14 SQL管理页面
 
 b）选择SQL信息的SQL组，如图3-15所示：
 
-![3-15](https://www.feisuanyz.com/fsimage/zc-image/cz_12-7_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645669-351c9d17-81bd-4000-b6de-7b3d682e67c4.png)
 
 ##### 图3-15 选择SQL组
 
 c）选择SQL信息的SQL模块，选择需要删除的SQL信息，如图3-16所示：
 
-![3-16](https://www.feisuanyz.com/fsimage/zc-image/cz_12-8_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645685-8be44a89-0205-4c87-9d9e-93e14d357a33.png)
 
 ##### 图3-16 选择删除的SQL信息
 
