--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/1. 实体模型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/1. 实体模型模块.md
@@ -8,13 +8,13 @@
 
 a）在项目管理页面中，选择“实体模型”，系统显示实体模型页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_13-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645804-8eee6d35-f3af-4640-b4bf-122809a33c73.png)
 
 ##### 图1-1 选择实体模型
 
 b）单击“新增实体模型模块”，系统显示“新增实体模型模块”对话框，输入实体模型模块名称和描述信息，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_13-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645820-bbbb83cc-65af-44cf-bdac-0f0f9853f9f1.png)
 
 ##### 图1-2 新增实体模型模块
 
