--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
@@ -12,13 +12,13 @@
 
 a）选中已创建的实体模型模块，单击“+”选择“新增实体模型”，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/ks-image/ks_19-03_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645930-50b01059-5f91-46a4-876b-e835c53e119b.png)
 
 ##### 图2-1 新增实体模型页面
 
 b）系统显示新增实体模型页面，输入实体模型的名称和描述，单击“新增”，根据实际需求添加实体模型字段，如图2-2所示：
 
-![2-2](https://www.feisuanyz.com/fsimage/ks-image/ks_19-04_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170645951-7815e663-d296-40d4-a18b-df7f2dcfab62.png)
 
 ##### 图2-2 添加实体模型字段
 
@@ -38,23 +38,23 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入实体模型模块，选中需复制的实体模型，单击旁边的三个点符号，或进入编辑实体模型页面，选择“复制实体模型”，如图2-3、2-4所示：
 
-![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_1.png)
+![image](https://user-images.githubusercontent.com/79617492/170645977-5f053804-d8e4-4309-a10c-645f2ac15def.png)
 
 ##### 图2-3 实体模型列表
 
-![2-4](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_9.png)
+![image](https://user-images.githubusercontent.com/79617492/170645998-39b7bd01-a696-4fd1-b53b-1dac4e510b3a.png)
 
 ##### 图2-4 编辑实体模型页面
 
 b）系统弹出“是否复制到当前模块”提示，您可根据需求选择当前模块或其他模块，如图2-5所示：
 
-![2-5](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_2.png)
+![image](https://user-images.githubusercontent.com/79617492/170646014-add4eec8-91b0-4742-bee7-e7267e50e7da.png)
 
 ##### 图2-5 弹出提示框
 
 c）修改实体模型名称，单击“提交”，如图2-6所示：
 
-![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_3.png)
+![image](https://user-images.githubusercontent.com/79617492/170646039-ec262af8-33cd-4d8f-ad8b-9392a61583b5.png)
 
 ##### 图2-6 修改实体模型名称
 
@@ -62,7 +62,7 @@ c）修改实体模型名称，单击“提交”，如图2-6所示：
 
 d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
-![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_4.png)
+![image](https://user-images.githubusercontent.com/79617492/170646053-c033b4da-3be0-4809-87b5-8e6b66a7b8bc.png)
 
 ##### 图2-7 复制成功
 
@@ -70,13 +70,13 @@ d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导入实体模型”，如图2-8所示：
 
-![2-8](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_5.png)
+![image](https://user-images.githubusercontent.com/79617492/170646069-e0a492a9-cb00-4e02-838d-efaf1469af69.png)
 
 ##### 图2-8 导入实体模型
 
 b）系统显示导入实体模型页面，选择将实体模型导入哪个模块，如图2-9所示：
 
-![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_6.png)
+![image](https://user-images.githubusercontent.com/79617492/170646093-c6915013-ede4-4873-9687-8a78bb609b28.png)
 
 ##### 图2-9 选择导入模块
 
@@ -94,13 +94,13 @@ e）系统提示“导入实体模型成功”。
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导出实体模型”，如图2-10所示：
 
-![2-10](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_7.png)
+![image](https://user-images.githubusercontent.com/79617492/170646134-a25e68e3-f79f-4a20-8138-abfbf185038c.png)
 
 ##### 图2-10 选择导出实体模型
 
 b）系统显示导出实体模型页面，输入导出实体模型文件的文件名（若未输入则自动生成），如图2-11所示：
 
-![2-11](https://www.feisuanyz.com/fsimage/zc-image/cz_13_2_1_8.png)
+![image](https://user-images.githubusercontent.com/79617492/170646156-10f98de7-5bc9-46cb-9583-c1c4fc490ffa.png)
 
 ##### 图2-11 导出实体模型页面
 
@@ -116,31 +116,31 @@ d）单击“确定”，需导出的实体模型JSON文件将在页面下方自
 
 #### 前提条件
 
-您需要先创建好实体模型模块，关于如何创建实体模型具体请参见[12.1.1新增实体模型模块](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97)。
+您需要先创建好实体模型模块，关于如何创建实体模型具体请参见[《SoFlu（后端）基础操作指南第12.1.1节：新增实体模型模块》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97.md#11-%E6%96%B0%E5%A2%9E%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97)。
 
 ##### 2.3.1 操作步骤
 
 a）在平台功能模块页面，选择“接口生成器”功能模块，系统显示“接口生成器”页面，如图2-12所示：
 
-![2-12](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_1.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-12.png)
 
 ##### 图2-12 选择接口生成器
 
 b）选中数据库，如图2-13所示，单击“下一步”：
 
-![2-13](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_2.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-13.png)
 
 ##### 图2-13 选择数据库
 
-c）勾选需要生成实体模型的表，如图6-2-3所示，单击“下一步”：
+c）勾选需要生成实体模型的表，如图2-14所示，单击“下一步”：
 
-![2-14](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_3.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-14.png)
 
 ##### 图2-14 选择数据库表
 
 d）勾选“创建实体模型”，选择实体模型模块，如图2-15所示：
 
-![2-15](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_4.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-15.png)
 
 ##### 图2-15 创建实体模型
 
@@ -148,6 +148,6 @@ e）单击“生成接口”，系统显示“操作成功”。
 
 f）选择“实体模型”功能模块，在对应的实体模型模块下查看生成的实体模型，如图2-16所示：
 
-![2-16](https://www.feisuanyz.com/fsimage/zc-image/czzn_13_2_3_5.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-16.png)
 
 ##### 图2-16 查看实体模型
