--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
@@ -12,13 +12,13 @@
 
 a）选中已创建的实体模型模块，单击“+”选择“新增实体模型”，如图2-1所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170645930-50b01059-5f91-46a4-876b-e835c53e119b.png)
+![image](https://user-images.githubusercontent.com/79617492/170646634-fc821e69-0e67-4eb3-8869-24bfac591a8c.png)
 
 ##### 图2-1 新增实体模型页面
 
 b）系统显示新增实体模型页面，输入实体模型的名称和描述，单击“新增”，根据实际需求添加实体模型字段，如图2-2所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170645951-7815e663-d296-40d4-a18b-df7f2dcfab62.png)
+![image](https://user-images.githubusercontent.com/79617492/170646670-fa871b9c-3603-40b8-bf2b-31e4d28e01a3.png)
 
 ##### 图2-2 添加实体模型字段
 
@@ -38,23 +38,23 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入实体模型模块，选中需复制的实体模型，单击旁边的三个点符号，或进入编辑实体模型页面，选择“复制实体模型”，如图2-3、2-4所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170645977-5f053804-d8e4-4309-a10c-645f2ac15def.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-3.png)
 
 ##### 图2-3 实体模型列表
 
-![image](https://user-images.githubusercontent.com/79617492/170645998-39b7bd01-a696-4fd1-b53b-1dac4e510b3a.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-4.png)
 
 ##### 图2-4 编辑实体模型页面
 
 b）系统弹出“是否复制到当前模块”提示，您可根据需求选择当前模块或其他模块，如图2-5所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646014-add4eec8-91b0-4742-bee7-e7267e50e7da.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-5.png)
 
 ##### 图2-5 弹出提示框
 
 c）修改实体模型名称，单击“提交”，如图2-6所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646039-ec262af8-33cd-4d8f-ad8b-9392a61583b5.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-6.png)
 
 ##### 图2-6 修改实体模型名称
 
@@ -62,7 +62,7 @@ c）修改实体模型名称，单击“提交”，如图2-6所示：
 
 d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646053-c033b4da-3be0-4809-87b5-8e6b66a7b8bc.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-7.png)
 
 ##### 图2-7 复制成功
 
@@ -70,13 +70,13 @@ d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导入实体模型”，如图2-8所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646069-e0a492a9-cb00-4e02-838d-efaf1469af69.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-8.png)
 
 ##### 图2-8 导入实体模型
 
 b）系统显示导入实体模型页面，选择将实体模型导入哪个模块，如图2-9所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646093-c6915013-ede4-4873-9687-8a78bb609b28.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-9.png)
 
 ##### 图2-9 选择导入模块
 
@@ -94,13 +94,13 @@ e）系统提示“导入实体模型成功”。
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导出实体模型”，如图2-10所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646134-a25e68e3-f79f-4a20-8138-abfbf185038c.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-10.png)
 
 ##### 图2-10 选择导出实体模型
 
 b）系统显示导出实体模型页面，输入导出实体模型文件的文件名（若未输入则自动生成），如图2-11所示：
 
-![image](https://user-images.githubusercontent.com/79617492/170646156-10f98de7-5bc9-46cb-9583-c1c4fc490ffa.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-11.png)
 
 ##### 图2-11 导出实体模型页面
 
