--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
@@ -38,23 +38,23 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入实体模型模块，选中需复制的实体模型，单击旁边的三个点符号，或进入编辑实体模型页面，选择“复制实体模型”，如图2-3、2-4所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/170646759-fb9da11f-0c1d-4954-b5ea-2f7ad94bff75.png)
 
 ##### 图2-3 实体模型列表
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-4.png)
+![image](https://user-images.githubusercontent.com/79617492/170646849-2cb6f852-29ac-4be5-99d7-caea01ce17b9.png)
 
 ##### 图2-4 编辑实体模型页面
 
 b）系统弹出“是否复制到当前模块”提示，您可根据需求选择当前模块或其他模块，如图2-5所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-5.png)
+![image](https://user-images.githubusercontent.com/79617492/170646847-01768765-8a87-403d-99ee-7eb8ee1579ce.png)
 
 ##### 图2-5 弹出提示框
 
 c）修改实体模型名称，单击“提交”，如图2-6所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-6.png)
+![image](https://user-images.githubusercontent.com/79617492/170646848-a087093c-fb94-46e7-9ef9-c18fafcca1ae.png)
 
 ##### 图2-6 修改实体模型名称
 
@@ -62,7 +62,7 @@ c）修改实体模型名称，单击“提交”，如图2-6所示：
 
 d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-7.png)
+![image](https://user-images.githubusercontent.com/79617492/170646850-1ae6bcc3-04d8-4505-ad03-d584bf00acc4.png)
 
 ##### 图2-7 复制成功
 
@@ -70,13 +70,13 @@ d）复制后的实体模型会显示在指定模块中，如图2-7所示：
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导入实体模型”，如图2-8所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-8.png)
+![image](https://user-images.githubusercontent.com/79617492/170646935-ce39b55e-6898-42d0-9b24-b8131180d7c2.png)
 
 ##### 图2-8 导入实体模型
 
 b）系统显示导入实体模型页面，选择将实体模型导入哪个模块，如图2-9所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-9.png)
+![image](https://user-images.githubusercontent.com/79617492/170646955-4aad3974-eda8-48d0-a4ef-1b35e142019b.png)
 
 ##### 图2-9 选择导入模块
 
@@ -94,13 +94,13 @@ e）系统提示“导入实体模型成功”。
 
 a）进入实体模型模块，单击“新增实体模型模块”旁边的三个点按钮选择“导出实体模型”，如图2-10所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-10.png)
+![image](https://user-images.githubusercontent.com/79617492/170646982-39390a55-3e54-45b5-9bfa-e851277c2684.png)
 
 ##### 图2-10 选择导出实体模型
 
 b）系统显示导出实体模型页面，输入导出实体模型文件的文件名（若未输入则自动生成），如图2-11所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-11.png)
+![image](https://user-images.githubusercontent.com/79617492/170647005-4ebf3fd4-eac3-4314-ac0c-1e024b554397.png)
 
 ##### 图2-11 导出实体模型页面
 
