--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/12. 实体模型/2. 实体模型.md
@@ -116,31 +116,31 @@ d）单击“确定”，需导出的实体模型JSON文件将在页面下方自
 
 #### 前提条件
 
-您需要先创建好实体模型模块，关于如何创建实体模型具体请参见[《SoFlu（后端）基础操作指南第12.1.1节：新增实体模型模块》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97.md#11-%E6%96%B0%E5%A2%9E%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97)。
+您需要先创建好实体模型模块，关于如何创建实体模型具体请参见[《SoFlu（后端）基础操作指南第12.1.1节：新增实体模型模块》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97.md)。
 
 ##### 2.3.1 操作步骤
 
 a）在平台功能模块页面，选择“接口生成器”功能模块，系统显示“接口生成器”页面，如图2-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-12.png)
+![image](https://user-images.githubusercontent.com/79617492/170647242-52d981bd-fa49-445d-9216-334979fffa4f.png)
 
 ##### 图2-12 选择接口生成器
 
 b）选中数据库，如图2-13所示，单击“下一步”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-13.png)
+![image](https://user-images.githubusercontent.com/79617492/170647261-c261d75f-60e8-44f2-b898-34831590ab67.png)
 
 ##### 图2-13 选择数据库
 
 c）勾选需要生成实体模型的表，如图2-14所示，单击“下一步”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-14.png)
+![image](https://user-images.githubusercontent.com/79617492/170647284-51e90af1-c33a-4052-920f-f496e5ff0e31.png)
 
 ##### 图2-14 选择数据库表
 
 d）勾选“创建实体模型”，选择实体模型模块，如图2-15所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-15.png)
+![image](https://user-images.githubusercontent.com/79617492/170647297-31454fce-dace-47a1-8e94-2282646961a9.png)
 
 ##### 图2-15 创建实体模型
 
@@ -148,6 +148,6 @@ e）单击“生成接口”，系统显示“操作成功”。
 
 f）选择“实体模型”功能模块，在对应的实体模型模块下查看生成的实体模型，如图2-16所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/12.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-16.png)
+![image](https://user-images.githubusercontent.com/79617492/170647310-cbf743f5-907f-49bb-8e6b-443bfa9d791a.png)
 
 ##### 图2-16 查看实体模型
