--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/14. 子流程管理/1. 子流程模块.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/14. 子流程管理/1. 子流程模块.md
@@ -8,13 +8,13 @@
 
 a）在项目管理页面中，选择“子流程管理”，系统显示子流程管理页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_15-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170647642-6c4c905d-50ba-46ca-a535-a4e6c204d25d.png)
 
 ##### 图1-1 选择子流程管理
 
 b）单击“新增子流程模块”，系统显示“新增子流程模块”对话框，输入子流程模块的名称和描述信息，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_15-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170647662-399eb50f-7658-49c4-becd-3f60cd4ad8e1.png)
 
 ##### 图1-2 新增子流程模块
 
