--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/1. 接口模块.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/1. 接口模块.md
@@ -8,13 +8,13 @@
 
 a）在项目管理页面中，选择“接口管理”，系统接口管理页面，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_16-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170648284-5f84f2aa-e9c9-4420-9a26-4ed613d2b342.png)
 
 ##### 图1-1 选择接口管理
 
 b）单击“新增接口模块”，系统显示“新增接口模块”对话框，输入接口模块的名称和描述信息，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_16-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/170648299-309a3fb2-9e20-47cb-a813-c10cdc7cea25.png)
 
 ##### 图1-2 新增接口模块
 
