--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/2. 接口.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/15. 接口管理/2. 接口.md
@@ -367,38 +367,43 @@ e）接下来将对组件的具体配置进行展示。
 
 ##### 图2-52
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-53.png)
+![image](https://user-images.githubusercontent.com/79617492/170657282-a8d0c0d1-6f26-4842-9714-16c76124f553.png)
 
 ##### 图2-53
 
 ##### e2）互斥条件组件【判断计数变量是否大于0】：用于判断计数变量的值是否大于0，若大于0，则通过客户端通信组件主动推送计数变量的值，若小于等于0，则结束程序，两条顺序流的流转条件的设置图2-54、图2-55、图2-56、图2-57、图2-58、图2-59、图2-60、图2-61所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-54.png)
+![image](https://user-images.githubusercontent.com/79617492/170657310-b64b29c1-1bb6-4172-b689-b6b02818d02e.png)
 
 ##### 图2-54
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-55.png)
+![image](https://user-images.githubusercontent.com/79617492/170657336-80086ecb-b241-4af7-9ca7-03b40eecaf5c.png)
 
 ##### 图2-55
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-56.png)
+![image](https://user-images.githubusercontent.com/79617492/170657376-315990ca-26a7-4722-b064-af98095e99bb.png)
+
 ##### 图2-56
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-57.png)
+![image](https://user-images.githubusercontent.com/79617492/170657408-bc47bb78-a4da-486d-aea8-c774b0ad8db3.png)
+
 ##### 图2-57
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-58.png)
+![image](https://user-images.githubusercontent.com/79617492/170657433-ff7da114-2d2e-4de8-9dfb-7e1fb3e2e754.png)
+
 ##### 图2-58
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-59.png)
+![image](https://user-images.githubusercontent.com/79617492/170657466-e6448e20-5b83-4871-ae18-91623b8bfbfa.png)
+
 ##### 图2-59
 
 ##### e3）输出结果组件：用于到计数变量的值小于等于0时，结束程序，将最终结果输出。
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-60.png)
+![image](https://user-images.githubusercontent.com/79617492/170657490-3ffb2e1e-6469-4edd-9b88-e5c02c03a313.png)
+
 ##### 图2-60
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/2-61.png)
+![image](https://user-images.githubusercontent.com/79617492/170657526-1349f343-4598-450d-85d0-63e58eab3735.png)
 
 ##### 图2-61
 
